--- a/style.css
+++ b/style.css
@@ -2004,6 +2004,7 @@ footer {
     color: #2f2f2f;
     font-size: 14px;
     font-weight: 500;
+    margin-bottom: 48px;
 }
 .system-section {
     margin-bottom: 64px;
@@ -2026,10 +2027,32 @@ footer {
 .steps-section {
     margin-bottom: 64px;
 }
-
-
-
-
+.system-items-wrapper {
+    display: flex;
+    position: relative;
+}
+.system-item p{
+    text-align: center;
+    padding: 0 50px;
+    color: #cccccc;
+    font-size: 13px;
+    font-weight: 600;
+}
+.system-item {
+    border-right: 1px solid #e9e9e9;
+    height: 450px;
+}
+.system-item:first-child {
+    border-left: 1px solid #e9e9e9;
+}
+.system-item:nth-child(2) {
+    border-right: 2px solid #ff8562;
+}
+.system-item:nth-child(2) p{
+    color: #ff8562;
+    font-size: 13px;
+    font-weight: 800;
+}
 
 
 .example-slider {
@@ -2154,6 +2177,241 @@ footer {
     border-radius: 50%;
     border: 14px solid #f9f9f9;
 }
+
+.system-bar {
+    position: absolute;
+    width: 300px;
+    height: 55px;
+    display: flex;
+    align-items: center;
+    border-radius: 10px;
+    background-color: #ffffff;
+    box-shadow: 0px 5px 15px 0px rgba(207, 214, 223, 0.3);
+    padding: 8px;
+}
+.system-bar-text p{
+    margin-bottom: -6px;
+    line-height: 19px;
+    color: #2f2f2f;
+    font-size: 12px;
+    font-weight: 600;
+}
+.system-bar-text span{
+    line-height: 17px;
+    color: #2f2f2f;
+    font-size: 11px;
+    font-weight: 400;
+}
+.system-bar-text {
+    height: fit-content;
+}
+.system-bar-img img {
+    border-radius: 50%;
+    margin-right: 16px;
+}
+.sys-orange {
+    border-radius: 10px;
+    background-color: #ff8562;
+    background-position: center center;
+    border-color: transparent;
+    border-style: solid;
+    box-shadow: 0px 5px 15px 0px rgba(255, 133, 98, 0.3);
+}
+.sys-orange .system-bar-text p{
+    color: #ffffff;
+}
+.sys-orange .system-bar-text span{
+    color: #ffffff;
+}
+
+
+
+.sys-bar1 {
+    left: 4%;
+    top: 16%;
+}
+.sys-bar1::before {
+    content: '35 задач';
+    width: fit-content;
+    height: fit-content;
+    position: absolute;
+    background-color: #fff;
+    border-radius: 5px;
+    background-color: #ffffff;
+    background-position: center center;
+    border-color: transparent;
+    border-style: solid;
+    line-height: 11px;
+    color: #2f2f2f;
+    font-size: 10px;
+    font-weight: 500;
+    right: 8px;
+    bottom: 8px;
+    padding: 0px 4px;
+}
+.sys-bar2 {
+    left: 9%;
+    top: 65%;
+}
+.sys-bar2::before {
+    content: '12 задач';
+    width: fit-content;
+    height: fit-content;
+    position: absolute;
+    background-color: #fff;
+    border-radius: 5px;
+    background-color: #ff8562;
+    background-position: center center;
+    border-color: transparent;
+    border-style: solid;
+    line-height: 11px;
+    color: #2f2f2f;
+    font-size: 10px;
+    font-weight: 500;
+    right: 8px;
+    bottom: 8px;
+    padding: 0px 4px;
+}
+.sys-bar3 {
+    left: 20%;
+    top: 35%;
+    width: 337px;
+}
+.sys-bar3::before {
+    content: '49 задач';
+    width: fit-content;
+    height: fit-content;
+    position: absolute;
+    border-radius: 5px;
+    background-color: #ff8562;
+    background-position: center center;
+    border-color: transparent;
+    border-style: solid;
+    line-height: 11px;
+    color: #ffffff;
+    font-size: 10px;
+    font-weight: 500;
+    right: 8px;
+    bottom: 8px;
+    padding: 0px 4px;
+}
+.sys-bar4 {
+    left: 38%;
+    top: 51%;
+}
+.sys-bar4::before {
+    content: '5 задач';
+    width: fit-content;
+    height: fit-content;
+    position: absolute;
+    border-radius: 5px;
+    background-color: #ff8562;
+    background-position: center center;
+    border-color: transparent;
+    border-style: solid;
+    line-height: 11px;
+    color: #ffffff;
+    font-size: 10px;
+    font-weight: 500;
+    right: 8px;
+    bottom: 8px;
+    padding: 0px 4px;
+}
+.sys-bar6 {
+    left: 58%;
+    top: 76%;
+    width: 344px;
+}
+.sys-bar6::before {
+    content: '16 задач';
+    width: fit-content;
+    height: fit-content;
+    position: absolute;
+    border-radius: 5px;
+    background-color: #ff8562;
+    background-position: center center;
+    border-color: transparent;
+    border-style: solid;
+    line-height: 11px;
+    color: #ffffff;
+    font-size: 10px;
+    font-weight: 500;
+    right: 8px;
+    bottom: 8px;
+    padding: 0px 4px;
+}
+.sys-bar5 {
+    left: 48.3%;
+    top: 17%;
+    width: 516px;
+}
+.sys-bar5 img:nth-child(2) {
+    transform: translateX(-20px);
+}
+.sys-bar5 .mid-nav__call-img {
+    margin-right: 0;
+}
+.sys-bar5::before {
+    content: '69 задач';
+    width: fit-content;
+    height: fit-content;
+    position: absolute;
+    border-radius: 5px;
+    background-color: #ff8562;
+    background-position: center center;
+    border-color: transparent;
+    border-style: solid;
+    line-height: 11px;
+    color: #ffffff;
+    font-size: 10px;
+    font-weight: 500;
+    right: 8px;
+    bottom: 8px;
+    padding: 0px 4px;
+}
+.sys-bar5::after {
+    content: 'Чек-лист';
+    width: fit-content;
+    height: fit-content;
+    position: absolute;
+    border-radius: 5px;
+    background-color: #26d265;
+    background-position: center center;
+    border-color: transparent;
+    border-style: solid;
+    line-height: 11px;
+    color: #ffffff;
+    font-size: 10px;
+    font-weight: 500;
+    right: 76px;
+    bottom: 8px;
+    padding: 0px 4px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 @media (min-width: 1200px) {
