--- a/style.css
+++ b/style.css
@@ -84,6 +84,10 @@ body {
     font-size: 12px;
     padding: 10px 18px !important;
     color: #2F2F2F !important;
+    transition: all .2s linear !important;
+}
+.top-nav .nav-link:hover {
+    color: #ff8562 !important;
 }
 .top-nav .nav-link img {
     width: 10px;
@@ -110,6 +114,9 @@ body {
 .mid-nav__logo {
     display: flex;
     align-items: center;
+}
+.mid-nav__logo img {
+    width: 173px;
 }
 .mid-nav__logo p {
     margin-bottom: 0;
@@ -173,6 +180,10 @@ body {
     height: 43px;
     border-radius: 50%;
 }
+.system-bar .mid-nav__call-img img {
+    width: 36px;
+    height: 36px;
+}
 .mid-nav__call-active {
     content: '';
     position: absolute;
@@ -182,7 +193,7 @@ body {
     background-color: #96df92;
     border-color: #f9f9f9;
     bottom: 0;
-    right: 11px;
+    right: 0px;
     border-radius: 50%;
 }
 
@@ -199,11 +210,18 @@ body {
     font-size: 14px;
     font-weight: 700;
     text-decoration: none;
+    transition: all .2s linear !important;
+}
+.mid-nav__phone-info a:hover {
+    color: #ff8562;
 }
 .mid-nav__phone-info p {
     font-size: 11px;
     margin-bottom: 0;
     font-weight: 500;
+}
+.mid-nav .mid-nav__call-img img{
+    margin-right: 0;
 }
 .mid-nav__phone-btn {
     height: 43px;
@@ -221,7 +239,7 @@ body {
     box-shadow: 0px 5px 15px 0px rgba(255, 107, 0, 0.3);
 }
 .mid-nav__phone-btn:hover {
-    background-color: #f54f21 !important;
+    background-color: #ff7205 !important;
 }
 .bottom-nav-wrapper {
     display: flex;
@@ -234,6 +252,121 @@ body {
     font-weight: 700;
     color: #2f2f2f;
     padding: 21px 0;
+    transition: all .2s linear !important;
+}
+.bottom-nav-wrapper a:hover {
+    color: #ff8562;
+}
+.bottom-nav-wrapper {
+    position: relative;
+}
+.bottom-nav-dropdown {
+    display: none;
+    position: absolute;
+    top: 63px;
+    padding: 16px 32px;
+    left: 0;
+    z-index: 5;
+    background: #fff;
+    border-radius: 10px;
+    -webkit-box-shadow: 0px 5px 15px 0px rgba(207, 214, 223, 0.5);
+    box-shadow: 0px 5px 15px 0px rgba(207, 214, 223, 0.5);
+    text-wrap: nowrap;
+}
+.bottom-nav-item1:hover .bottom-nav-dropdown1{
+    color: #ff8562;
+    display: block !important;
+}
+.bottom-nav-item2:hover .bottom-nav-dropdown2{
+    color: #ff8562;
+    display: block !important;
+}
+.bottom-nav-item3:hover .bottom-nav-dropdown3{
+    color: #ff8562;
+    display: block !important;
+}
+.bottom-nav-item4:hover .bottom-nav-dropdown4{
+    color: #ff8562;
+    display: block !important;
+}
+.bottom-nav-item5:hover .bottom-nav-dropdown5{
+    color: #ff8562;
+    display: block !important;
+}
+.bottom-nav-item6:hover .bottom-nav-dropdown6{
+    color: #ff8562;
+    display: block !important;
+}
+.bottom-nav-item7:hover .bottom-nav-dropdown7{
+    color: #ff8562;
+    display: block !important;
+}
+.bottom-nav-dropdown-list {
+    display: flex;
+    flex-direction: column;
+}
+.bottom-nav-dropdown-list a {
+    padding: 4px 0;
+    font-weight: 400;
+}
+.bottom-nav-item2 {
+    position: relative;
+}
+.bottom-nav-dropdown2 {
+    top: 44px;
+}
+.bottom-nav-item3 {
+    position: relative;
+}
+.bottom-nav-dropdown3 {
+    top: 44px;
+}
+.bottom-nav-item4 {
+    position: relative;
+}
+.bottom-nav-dropdown4 {
+    top: 44px;
+}
+.bottom-nav-item5 {
+    position: relative;
+}
+.bottom-nav-dropdown5 {
+    top: 34px;
+}
+.bottom-nav-dropdown6 {
+    right: -16px;
+}
+.bottom-nav-item7 {
+    position: relative;
+}
+.bottom-nav-dropdown7 {
+    top: 44px;
+}
+.bottom-nav-dropdown6 .bottom-nav-dropdown-list:first-child {
+    border-right: 1px solid rgba(183,187,199,0.57);
+}
+.bottom-nav-dropdown6 .bottom-nav-dropdown-list:last-child {
+    border-left: 1px solid rgba(183,187,199,0.57);
+}
+.bottom-nav-dropdown-list-strong {
+    font-weight: 700 !important;
+}
+.nav-dropdown-list-padding {
+    padding-top: 30px;
+}
+
+.top-nav-dropdown a {
+    text-decoration: none;
+    font-size: 14px;
+    font-weight: 700;
+    color: #2f2f2f;
+    padding: 21px 0;
+    transition: all .2s linear !important;
+    padding: 4px 0;
+    font-weight: 400;
+}
+.top-nav-dropdown a:hover {
+    color: #ff8562;
 }
 
 .banner {
@@ -303,8 +436,9 @@ body {
     font-size: 15px;
     font-weight: 500;
 }
-.banner-info-item-text p span {
+.banner-info-item-text p a {
     color: #ff8562;
+    text-decoration: none;
 }
 .banner-star-img {
     width: 15px !important;
@@ -409,15 +543,15 @@ body {
 }
 .banner-btn1:hover {
     color: #ffffff;
-    background-color: #f54f21;
+    background-color: #ff7205;
 }
 .banner-btn2:hover {
-    background-color: #26D303;
+    background-color: #2FEA71;
     color: #ffffff;
 }
 .mid-nav__phone-btn:hover {
     color: #ffffff;
-    background-color: #ff8562;
+    background-color: #ff7205;
 }
 .banner-buttons-wrapper a {
     text-decoration: none;
@@ -562,11 +696,12 @@ body {
 }
 .more-btn:hover {
     color: #ffffff;
-    background-color: #f54f21;
+    background-color: #ff7205;
 }
-.services-items-wrapper .col-3 {
+.services-items-wrapper .col-xl-3 {
     padding: 0 6px !important;
 }
+
 
 footer {
     background-color: #fff;
@@ -586,6 +721,10 @@ footer {
     font-size: 12px;
     font-weight: 500;
     margin-bottom: 4px;
+    transition: all .2s linear !important;
+}
+.footer-links-list a:hover {
+    color: #ff8562;
 }
 .footer-links-list {
     display: flex;
@@ -615,6 +754,10 @@ footer {
     font-size: 18px;
     font-weight: 700;
     margin-bottom: 0;
+}
+.footer-contacts__phone p:hover {
+    color: #ff8562;
+    cursor: pointer;
 }
 .footer-contacts__mail img {
     width: 19px;
@@ -832,6 +975,10 @@ footer {
     font-weight: 400;
     color: #2f2f2f;
 }
+.price-list-item__title a {
+    text-decoration: none;
+    color: #2f2f2f;
+}
 .price-list-item:first-child {
     font-weight: 700;
 }
@@ -859,7 +1006,7 @@ footer {
 }
 .price-list-price button:hover {
     color: #ffffff;
-    background-color: #f54f21;
+    background-color: #ff7205;
 }
 .price-lists-wrapper .col-lg-6 {
     padding: 0 6px !important;
@@ -1114,7 +1261,7 @@ footer {
     border: 0;
     outline: 0;
     color: #757575;
-    font-size: 14px;
+    font-size: 15px;
     font-weight: 400;
     padding-left: 16px;
     padding-right: 16px;
@@ -1134,7 +1281,7 @@ footer {
     margin-top: 16px;
 }
 .questions-form-send:hover {
-    background-color: #f54f21;
+    background-color: #ff7205;
     color: #fff;
 }
 .questions-form-checkbox input[type="checkbox"] {
@@ -1155,10 +1302,10 @@ footer {
     left: 0;
     height: 21px;
     width: 21px;
-    background-color: #f6a085;
+    background-color: #fff;
     border-radius: 50%;
     transition: background-image 0.3s ease;
-    border: 1px solid #fff;
+    border: 1px solid #f6a085;
 }
 .questions-form-alert {
     display: flex;
@@ -1304,7 +1451,7 @@ footer {
     border-radius: 12px;
     background-color: #ffffff;
     box-shadow: 0px 5px 15px 0px rgba(207, 214, 223, 0.3);
-    padding: 12px;
+    padding: 12px 16px;
     line-height: 16px;
     color: #2f2f2f;
     font-size: 12px;
@@ -1653,7 +1800,7 @@ footer {
     background-color: #ffffff;
     box-shadow: 0px 5px 15px 0px rgba(207, 214, 223, 0.3);
     padding: 16px;
-    margin-bottom: 24px;
+    margin-bottom: 16px;
 }
 .example-item-image {
     width: 100%;
@@ -1662,6 +1809,9 @@ footer {
     border-radius: 20px;
     margin-bottom: 24px;
     position: relative;
+}
+.example-items-wrapper .col-lg-6 {
+    padding: 0 8px;
 }
 .example-item-image-bar1 {
     position: absolute;
@@ -1930,6 +2080,10 @@ footer {
     display: flex;
     align-items: flex-end;
     margin-left: 32px;
+    width: 460px;
+}
+.reasons-img img {
+    width: 492px;
 }
 .sales-section .price-section-title h2 span{
     color: #ff8562;
@@ -2034,14 +2188,20 @@ footer {
     height: 55px;
 }
 .sales-btn:hover {
-    color: #ff8562;
-    background-color: #ffffff;
+    color: #ffffff;
+    background-color: #ff8562;
     border-color: #ff8562;
 }
-.sales-btn img {
-    width: 16px;
-    margin-right: 8px;
+.sales-btn svg {
+    width: 22px;
+    margin-right: 4px;
+    fill: #ff8562;
+    transition: all .2s linear;
 }
+.sales-btn:hover svg{
+    fill: #fff;
+} 
+
 .sales-slide-img-alert {
     position: absolute;
     bottom: 8px;
@@ -2100,7 +2260,7 @@ footer {
 .reviews-bar-rate img {
     width: 65px;
 }
-.reviews-bars-wrapper .col-lg-3 {
+.reviews-bars-wrapper .col-xl-3 {
     padding: 0 8px;
 }
 .reviews-bars-wrapper {
@@ -2134,6 +2294,7 @@ footer {
     right: 12px;
     bottom: 12px;
     width: 56px;
+    cursor: pointer;
 }
 .reviews-video-title {
     color: #2f2f2f;
@@ -2151,16 +2312,17 @@ footer {
 .reviews-slide-rate {
     display: flex;
     align-items: center;
+    margin-bottom: 4px;
 }
 .reviews-slide-rate img {
     margin-right: 8px;
     width: 94px;
 }
 .reviews-slide-rate p {
-    margin-bottom: 0;
-    color: #2f2f2f;
-    font-size: 16px;
-    font-weight: 600;
+    margin-bottom: 0 !important;
+    color: #2f2f2f !important; 
+    font-size: 16px !important;
+    font-weight: 600 !important;
 }
 .reviews-slide-logo {
     position: absolute;
@@ -2179,7 +2341,7 @@ footer {
     color: #2f2f2f;
     font-size: 14px;
     font-weight: 600;
-    margin-bottom: 8px;
+    margin-bottom: 16px;
 }
 .reviews-slide p {
     line-height: 18px;
@@ -2248,6 +2410,10 @@ footer {
     font-size: 11px;
     font-weight: 500;
 }
+.reviews-slide-alert a {
+    text-decoration: none;
+    color: #2f2f2f;
+}
 .reviews-section {
     margin-bottom: 64px;
 }
@@ -2306,7 +2472,7 @@ footer {
     margin-bottom: 0;
     text-align: center;
 }
-.team-items-wrapper .col-lg-3 {
+.team-items-wrapper .col-lg-6 {
     padding: 0 8px;
 }
 .team-bar {
@@ -2384,12 +2550,10 @@ footer {
 .system-item {
     border-right: 1px solid #e9e9e9;
     height: 450px;
+    position: relative;
 }
 .system-item:first-child {
     border-left: 1px solid #e9e9e9;
-}
-.system-item:nth-child(2) {
-    border-right: 2px solid #ff8562;
 }
 .system-item:nth-child(2) p{
     color: #ff8562;
@@ -2397,7 +2561,15 @@ footer {
     font-weight: 800;
 }
 
-
+.system-items-wrapper-line {
+    position: absolute;
+    content: '';
+    width: 2px;
+    height: 100%;
+    background: #ff8562;
+    right: 23%;
+    top: 0;
+}
 .example-slider {
     position: relative;
     overflow: hidden;
@@ -2453,7 +2625,20 @@ footer {
 }
 
 .steps-items-wrapper {
-    border-bottom: 2px dashed #ff8562;
+    position: relative;
+}
+.steps-items-wrapper:before {
+    content: '_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ ';
+    position: absolute;
+    bottom: -5px;
+    left: 0;
+    right: 0;
+    text-align: center;
+    text-wrap: nowrap;
+    color: #ff8562;
+    font-size: 20px;
+    overflow: hidden;
+    transform: translateX(-30px);
 }
 .steps-num {
     width: 170px;
@@ -2520,6 +2705,16 @@ footer {
     border-radius: 50%;
     border: 14px solid #f9f9f9;
 }
+.steps-text-item-circle::before {
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    content: '';
+    transform: translate(-1px, -1px);
+    background-color: #ff8562;
+    border-radius: 50%;
+    border: 2px solid #fff;
+}
 
 .system-bar {
     position: absolute;
@@ -2551,6 +2746,8 @@ footer {
 .system-bar-img img {
     border-radius: 50%;
     margin-right: 16px;
+    width: 36px;
+    height: 36px;
 }
 .sys-orange {
     border-radius: 10px;
@@ -2603,7 +2800,6 @@ footer {
     position: absolute;
     background-color: #fff;
     border-radius: 5px;
-    background-color: #ff8562;
     background-position: center center;
     border-color: transparent;
     border-style: solid;
@@ -2616,9 +2812,9 @@ footer {
     padding: 0px 4px;
 }
 .sys-bar3 {
-    left: 20%;
+    left: 19.4%;
     top: 35%;
-    width: 337px;
+    width: 341px;
 }
 .sys-bar3::before {
     content: '49 задач';
@@ -2639,7 +2835,7 @@ footer {
     padding: 0px 4px;
 }
 .sys-bar4 {
-    left: 38%;
+    left: 38.5%;
     top: 51%;
 }
 .sys-bar4::before {
@@ -2689,7 +2885,7 @@ footer {
     width: 516px;
 }
 .sys-bar5 img:nth-child(2) {
-    transform: translateX(-20px);
+    transform: translateX(-12px);
 }
 .sys-bar5 .mid-nav__call-img {
     margin-right: 0;
@@ -2710,7 +2906,7 @@ footer {
     font-weight: 500;
     right: 8px;
     bottom: 8px;
-    padding: 0px 4px;
+    padding: 1px 4px;
 }
 .sys-bar5::after {
     content: 'Чек-лист';
@@ -2728,7 +2924,7 @@ footer {
     font-weight: 500;
     right: 76px;
     bottom: 8px;
-    padding: 0px 4px;
+    padding: 1px 4px;
 }
 .mob-menu-burger {
     position: fixed;
@@ -2934,6 +3130,21 @@ body.no-scroll {
     }
     .mob-menu-burger {
         display: none;
+    }
+    .reasons-item-num {
+        min-width: 60px;
+    }
+    .reasons-item p {
+        transform: translateX(8px);
+    }
+    .reasons-form-bar {
+        margin-top: 32px;
+    }
+    .reviews-videos-wrapper .col-lg-4 {
+        padding: 0 8px;
+    }
+    .mid-nav__call-img img {
+        margin-right: 0;
     }
 }
 @media (max-width: 1200px) {
@@ -3252,10 +3463,12 @@ body.no-scroll {
     .main-slider-slide-markers {
         display: none;
     }
-    .mob-main-slider-slide-text {
+    .mob-main-slider-slider-text-items-wrapper {
         display: flex;
     }
-    
+    .mob-main-slider-slider-text {
+        top: 400px;
+    }
     .main-slider-wrapper .slick-track {
         height: 700px;
     }
@@ -3483,6 +3696,9 @@ body.no-scroll {
     }
     .main-slider-wrapper .slick-dots li {
         height: 40px;
+    }
+    .mob-main-slider-slider-text {
+        top: 330px;
     }
     /*Example*/
     /*Reasons*/
